--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "home_page",
+  "name": "lf",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.0",
-    "mongoose": "^6.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.6"
   }
 }
