--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI= mongodb+srv://lostfound:<4qg7ST2CvxaAJXLX>@cluster0.k3tmwuh.mongodb.net/Lost_and_found?retryWrites=true&w=majority
+MONGODB_URI= "mongodb+srv://lostfound:asat1948@cluster0.k3tmwuh.mongodb.net/Lost_and_found?retryWrites=true&w=majority"
